--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "mongodb": "^7.0.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
