feat(referral); refactor(auth); config(dependencies)
Implemented asynchronous queue-based referral processing using BullMQ and Redis to resolve OAuth callback timeout issues. The feat(referral) introduced background workers, status polling API, and frontend hooks for non-blocking referral creation. The refactor(auth) completely rewrote the OAuth callback flow to queue referral jobs instead of synchronous creation with retry logic, eliminating 12s timeout bottlenecks. The config(dependencies) added bullmq (v5.65.1) and ioredis (v5.8.2) for job queue infrastructure, and updated Next.js (16.0.3 → 16.0.8) and React (19.2.0 → 19.2.1) for stability improvements.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@zumer/snapdom": "^2.0.0",
+    "bullmq": "^5.65.1",
+    "ioredis": "^5.8.2",
     "mongodb": "^7.0.0",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "next-auth": "^4.24.13",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
